deploy/overlays/node/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: node-ingress
#   namespace: napi
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: nano-pi.local
#       http:
#         paths:
#           - pathType: Prefix
#             backend:
#               service:
#                 name: rpi-node-service
#                 port:
#                   number: 80
#             path: /
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    add-log-annotation: "true"
  annotations:
    kubernetes.io/ingress.class: caddy
  name: rpi-node-external-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: rpi-node-service
                port:
                  number: 3000
            path: /api/v1
            pathType: Prefix
